fix header and main spacing

--- a/source/hello-page/hello-style.css
+++ b/source/hello-page/hello-style.css
@@ -5,7 +5,7 @@
 /* navbar */
 body {
     background-color: #FCF8E8;
-    margin: 100px 0 0 0;
+    padding: 80px 0 0 0;
 }
 
 header {
@@ -71,6 +71,7 @@ h2 {
     font-size: 6rem;
     padding-top: 200px;
     text-align: center;
+    margin-top: 0px;
 }
 
 /*button*/
